--- a/docker-compose-v3.yml
+++ b/docker-compose-v3.yml
@@ -1,92 +1,80 @@
-version: '3'
+version: '3.3'
 
 services:
   namenode:
-    image: bde2020/hadoop-namenode:2.0.0-hadoop3.2.1-java8
+    image: 192.168.150.83:15000/m8928/hadoop-namenode:3.2.2-java8
+    hostname: "namenode-{{.Node.ID}}"
     networks:
-      - hbase
+      - hadoop
+    ports:
+      - 9870:9870
+      - 9000:9000
     volumes:
-      - namenode:/hadoop/dfs/name
+      - /data/container_data/namenode:/hadoop/dfs/name
+      - /tmp:/tmp
     environment:
-      - CLUSTER_NAME=test
+      - CLUSTER_NAME=HADOOP
     env_file:
       - ./hadoop.env
     deploy:
       mode: replicated
       replicas: 1
-      restart_policy:
-        condition: on-failure
       placement:
         constraints:
-          - node.hostname == akswnc4.aksw.uni-leipzig.de
-      labels:
-        traefik.docker.network: hbase
-        traefik.port: 50070
+          - node.labels.namenode==true
+      restart_policy:
+        condition: on-failure
 
   datanode:
-    image: bde2020/hadoop-datanode:2.0.0-hadoop3.2.1-java8
+    image: 192.168.150.83:15000/m8928/hadoop-datanode:3.2.2-java8
+    hostname: "datanode-{{.Node.ID}}"
     networks:
-      - hbase
+      - hadoop
     volumes:
-      - datanode:/hadoop/dfs/data
+      - /data/container_data/datanode:/hadoop/dfs/data
+    environment:
+      SERVICE_PRECONDITION: "namenode:9870"
     env_file:
       - ./hadoop.env
-    environment:
-      SERVICE_PRECONDITION: "namenode:50070"
+    ports:
+     - target: 9864
+       published: 9864
+       mode: host
+     - target: 9866
+       published: 9866
+       mode: host
     deploy:
       mode: global
-      restart_policy:
-        condition: on-failure
-      labels:
-        traefik.docker.network: hbase
-        traefik.port: 50075
-
-  resourcemanager:
-    image: bde2020/hadoop-resourcemanager:2.0.0-hadoop3.2.1-java8
-    networks:
-      - hbase
-    environment:
-      SERVICE_PRECONDITION: "namenode:50070 datanode:50075"
-    env_file:
-      - ./hadoop.env
-    deploy:
-      mode: replicated
-      replicas: 1
-      restart_policy:
-        condition: on-failure
       placement:
         constraints:
-          - node.hostname == akswnc4.aksw.uni-leipzig.de
-      labels:
-        traefik.docker.network: hbase
-        traefik.port: 8088
-    healthcheck:
-      disable: true
+          - node.labels.datanode==true
+      restart_policy:
+        condition: on-failure
 
   nodemanager:
-    image: bde2020/hadoop-nodemanager:2.0.0-hadoop3.2.1-java8
+    image: 192.168.150.83:15000/m8928/hadoop-nodemanager:3.2.2-java8
     networks:
-      - hbase
+      - hadoop
     environment:
-      SERVICE_PRECONDITION: "namenode:50070 datanode:50075 resourcemanager:8088"
+      SERVICE_PRECONDITION: "namenode:9870 datanode:9864 resourcemanager:8088"
     env_file:
       - ./hadoop.env
     deploy:
       mode: global
+      placement:
+        constraints:
+          - node.labels.datanode==true
       restart_policy:
         condition: on-failure
-      labels:
-        traefik.docker.network: hbase
-        traefik.port: 8042
 
-  historyserver:
-    image: bde2020/hadoop-historyserver:2.0.0-hadoop3.2.1-java8
+  resourcemanager:
+    image: 192.168.150.83:15000/m8928/hadoop-resourcemanager:3.2.2-java8
     networks:
-      - hbase
-    volumes:
-      - hadoop_historyserver:/hadoop/yarn/timeline
+      - hadoop
+    ports:
+     - 18088:8088
     environment:
-      SERVICE_PRECONDITION: "namenode:50070 datanode:50075 resourcemanager:8088"
+      SERVICE_PRECONDITION: "namenode:9870 historyserver:8188"
     env_file:
       - ./hadoop.env
     deploy:
@@ -94,17 +82,70 @@ services:
       replicas: 1
       placement:
         constraints:
-          - node.hostname == akswnc4.aksw.uni-leipzig.de
-      labels:
-        traefik.docker.network: hbase
-        traefik.port: 8188
+          - node.labels.namenode==true
+      restart_policy:
+        condition: on-failure
 
-volumes:
-  datanode:
-  namenode:
-  hadoop_historyserver:
+  historyserver:
+    image: 192.168.150.83:15000/m8928/hadoop-historyserver:3.2.2-java8
+    networks:
+      - hadoop
+    ports:
+      - 18188:8188
+    environment:
+      SERVICE_PRECONDITION: "namenode:9870 datanode:9864"
+    volumes:
+      - /data/container_data/historyserver:/hadoop/yarn/timeline
+    env_file:
+      - ./hadoop.env
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - node.labels.namenode==true
+      restart_policy:
+        condition: on-failure
+
+  metastore:
+    image: 192.168.150.83:15000/postgres:latest
+    networks:
+      - hadoop
+    volumes:
+      - /data/container_data/postgres:/var/lib/postgresql/data/pgdata
+    environment:
+      POSTGRES_PASSWORD: "hive"
+      POSTGRES_USER: "hive"
+      POSTGRES_DB: "hive"
+      PGDATA: "/var/lib/postgresql/data/pgdata"
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - node.labels.namenode==true
+      restart_policy:
+        condition: on-failure
+
+  hiveserver:
+    image: 192.168.150.83:15000/m8928/hadoop-hiveserver:3.2.2-java8
+    networks:
+      - hadoop
+    ports:
+      - 20000:10000
+      - 20002:10002
+    environment:
+      SERVICE_PRECONDITION: "namenode:9870 metastore:5432 resourcemanager:8088 historyserver:8188"
+    env_file:
+      - ./hadoop.env
+    deploy:
+      mode: replicated
+      replicas: 1
+      placement:
+        constraints:
+          - node.labels.namenode==true
+      restart_policy:
+        condition: on-failure
 
 networks:
-  hbase:
-    external:
-      name: hbase
+  hadoop:
