--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   namenode:
-    image: m8928/hadoop-namenode:3.2.2-java8
+    image: m8928/hadoop-namenode:3.3.3-java8
     container_name: namenode
     restart: always
     ports:
@@ -17,7 +17,7 @@ services:
       - ./hadoop.env
 
   datanode01:
-    image: m8928/hadoop-datanode:3.2.2-java8
+    image: m8928/hadoop-datanode:3.3.3-java8
     container_name: datanode01
     restart: always
     volumes:
@@ -28,7 +28,7 @@ services:
       - ./hadoop.env
 
   datanode02:
-    image: m8928/hadoop-datanode:3.2.2-java8
+    image: m8928/hadoop-datanode:3.3.3-java8
     container_name: datanode02
     restart: always
     volumes:
@@ -39,7 +39,7 @@ services:
       - ./hadoop.env
 
   datanode03:
-    image: m8928/hadoop-datanode:3.2.2-java8
+    image: m8928/hadoop-datanode:3.3.3-java8
     container_name: datanode03
     restart: always
     volumes:
@@ -50,7 +50,7 @@ services:
       - ./hadoop.env
   
   resourcemanager:
-    image: m8928/hadoop-resourcemanager:3.2.2-java8
+    image: m8928/hadoop-resourcemanager:3.3.3-java8
     container_name: resourcemanager
     restart: always
     ports:
@@ -61,7 +61,7 @@ services:
       - ./hadoop.env
 
   nodemanager01:
-    image: m8928/hadoop-nodemanager:3.2.2-java8
+    image: m8928/hadoop-nodemanager:3.3.3-java8
     container_name: nodemanager01
     restart: always
     environment:
@@ -70,7 +70,7 @@ services:
       - ./hadoop.env
  
   nodemanager02:
-    image: m8928/hadoop-nodemanager:3.2.2-java8
+    image: m8928/hadoop-nodemanager:3.3.3-java8
     container_name: nodemanager02
     restart: always
     environment:
@@ -79,7 +79,7 @@ services:
       - ./hadoop.env
 
   nodemanager03:
-    image: m8928/hadoop-nodemanager:3.2.2-java8
+    image: m8928/hadoop-nodemanager:3.3.3-java8
     container_name: nodemanager03
     restart: always
     environment:
@@ -88,7 +88,7 @@ services:
       - ./hadoop.env
  
   historyserver:
-    image: m8928/hadoop-historyserver:3.2.2-java8
+    image: m8928/hadoop-historyserver:3.3.3-java8
     container_name: historyserver
     restart: always
     ports:
@@ -113,7 +113,7 @@ services:
       MYSQL_PASSWORD: "!gl00sec"
 
   hiveserver:
-    image: hadoop-hive:3.1.2-hadoop3.2.1-java8
+    image: m8928/hadoop-hive:3.1.2-hadoop3.3.3-java8
     container_name: hiveserver
     restart: always
     ports:
