--- a/namenode/Dockerfile
+++ b/namenode/Dockerfile
@@ -1,4 +1,4 @@
-FROM 192.168.150.83:15000/m8928/hadoop-base-with-tez:3.3.3-java8
+FROM bde2020/hadoop-base-with-tez:3.3.3-java8
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5m CMD curl -f http://localhost:9870/ || exit 1
 
