--- a/historyserver/Dockerfile
+++ b/historyserver/Dockerfile
@@ -1,4 +1,4 @@
-FROM bde2020/hadoop-base-with-tez:3.3.3-java8
+FROM bde2020/hadoop-base-with-tez:2.0.0-hadoop3.3.3-hive3.1.3-java8
 
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5m CMD curl -f http://localhost:8188/ || exit 1
 
