--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
     image: bde2020/hadoop-resourcemanager:2.0.0-hadoop3.3.3-java8
     container_name: resourcemanager
     restart: always
+    ports:
+      - 8088:8088
     environment:
       SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864"
     env_file:
@@ -39,6 +41,8 @@ services:
     image: bde2020/hadoop-nodemanager:2.0.0-hadoop3.3.3-java8
     container_name: nodemanager
     restart: always
+    ports:
+     - 8042:8042
     environment:
       SERVICE_PRECONDITION: "namenode:9000 namenode:9870 datanode:9864 resourcemanager:8088"
     env_file:
