--- a/hadoop.env
+++ b/hadoop.env
@@ -41,3 +41,35 @@ MAPRED_CONF_mapreduce_reduce_java_opts=-Xmx6144m
 MAPRED_CONF_yarn_app_mapreduce_am_env=HADOOP_MAPRED_HOME=/opt/hadoop-3.3.3/
 MAPRED_CONF_mapreduce_map_env=HADOOP_MAPRED_HOME=/opt/hadoop-3.3.3/
 MAPRED_CONF_mapreduce_reduce_env=HADOOP_MAPRED_HOME=/opt/hadoop-3.3.3/
+
+#TEZ_CONF_tez_lib_uris=${fs.defaultFS}/apps/tez-0.10.1/tez.tar.gz
+#TEZ_CONF_tez_use_cluster_hadoop___libs=true
+#TEZ_CONF_tez_am_java_opts=-Xmx6554m
+#TEZ_CONF_tez_am_resource_memory_mb=8192
+#TEZ_CONF_tez_use_cluster_hadoop__libs=false
+
+#HIVE_CONF_hive_execution_engine=tez
+#HIVE_CONF_hive_tez_exec_print_summary=true
+#HIVE_CONF_tez_am_log_level=debug
+HIVE_CONF_mapreduce_map_log_level=debug
+HIVE_CONF_hive_tez_log_level=debug
+#HIVE_CONF_tez_am_java_opts=-Xmx6554m
+#HIVE_CONF_tez_am_resource_memory_mb=8192
+HIVE_CONF_hive_server2_tez_initialize_default_sessions=true
+
+HIVE_CONF_hive_metastore_schema_verification=false
+HIVE_CONF_hive_metastore_try_direct_sql=false
+HIVE_CONF_hive_metastore_try_direct_sql_ddl=false
+HIVE_CONF_javax_jdo_option_ConnectionURL=jdbc:postgresql://metastore:5432/hive
+HIVE_CONF_javax_jdo_option_ConnectionUserName=hive
+HIVE_CONF_javax_jdo_option_ConnectionPassword=hive
+HIVE_CONF_javax_jdo_option_ConnectionDriverName=org.postgresql.Driver
+HIVE_CONF_hive_server2_enable_doAs=false
+HIVE_CONF_hive_users_in_admin_role=root
+HIVE_CONF_hive_server2_thrift_port=10000
+HIVE_CONF_hive_log_explain_output=true
+HIVE_CONF_hive_metastore_warehouse_dir=/user/hive/warehouse
+HIVE_CONF_hive_exec_scratchdir=/tmp
+#HIVE_CONF_hive_log_dir=/tmp
+#HIVE_CONF_hive_log_file=hiveserver2.log
+#HIVE_CONF_hive_root_logger=DEBUG,DRFA
