--- a/hadoop.env
+++ b/hadoop.env
@@ -55,7 +55,8 @@ TEZ_CONF_tez_am_java_opts=-Xmx6554m
 TEZ_CONF_tez_am_resource_memory_mb=8192
 TEZ_CONF_tez_use_cluster_hadoop__libs=false
 
-HIVE_CONF_hive_execution_engine=tez
+#HIVE_CONF_hive_execution_engine=tez
+HIVE_CONF_hive_execution_engine=mr
 HIVE_CONF_hive_tez_exec_print_summary=true
 HIVE_CONF_tez_am_log_level=debug
 HIVE_CONF_mapreduce_map_log_level=debug
